--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,10 @@
 @import "./reset.css";
-
-:root {
-    font-size: 16px;
-    --bg-color: #c4c4c4;
-    --header-color: #f31918;
-    --font-color: #000;
-    --light-color: #fff;
-}
+@import "./variables.css";
+@import "./headers.css";
+@import "./text.css";
+@import "./buttons.css";
+@import "./form.css";
+@import "./modal.css";
 
 .body {
     width: 100%;
@@ -25,116 +23,4 @@
     justify-content: center;
     align-items: flex-start;
     align-content: flex-start;
-}
-
-.pickup *[class*="header"] {
-    width: 100%;
-    padding: 1rem;
-    text-align: center;
-}
-
-.pickup .header1 {
-    color: var(--header-color);
-    text-transform: uppercase;
-    font-size: 1.5rem;
-}
-
-.pickup .header2 {
-    font-size: 2rem;
-}
-
-.pickup .header3 {
-    font-size: 1rem;
-}
-
-.pickup .text {
-    width: 100%;
-    white-space: pre-line;
-    text-align: center;
-    padding: 1rem;
-    padding-top: 0;
-}
-
-.pickup .form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 30rem;
-}
-
-.pickup .inputCnt, .pickup .buttonCnt {
-    width: 45%;
-    max-width: 12rem;
-}
-
-.pickup .inputCnt {
-    visibility: hidden;
-}
-
-.pickup .inputCnt>*, .pickup .buttonCnt>* {
-    width: 100%;
-}
-
-.pickup .inputCnt .label {
-    font-size: 0.8rem;
-}
-
-.pickup .inputCnt .input {
-    max-width: 12rem;
-    font-size: 1.3rem;
-    line-height: 2rem;
-    text-align: center;
-    background: var(--light-color);
-}
-
-.pickup .form-message {
-    font-size: 0.7rem;
-    line-height: 0.8rem;
-}
-
-.pickup .button-start, .pickup .button-submit {
-    max-width: 12rem;
-    min-width: 7rem;
-    min-height: 3rem;
-    background: var(--header-color);
-    font-size: 1.1rem;
-    padding: 1rem;
-    margin: 2.5rem 0;
-    display: block;
-}
-
-.pickup .button-submit {
-    display: none;
-}
-
-.pickup .modal {
-    max-width: 30rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    position: fixed;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 3;
-    border: 1px solid var(--font-color);
-    background: var(--bg-color);
-    padding: 1rem;
-    display: none;
-}
-
-.pickup .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 2;
-    background: var(--font-color);
-    opacity: 0.2;
-    display: none;
-}
-
-.pickup .modal .button {
-    width: 42%;
 }
