--- a/css/headers.css
+++ b/css/headers.css
@@ -1,13 +1,13 @@
 .pickup *[class*="header"] {
     width: 100%;
-    padding: 1rem;
+    padding: 1.5rem;
     text-align: center;
 }
 
 .pickup .header1 {
     color: var(--header-color);
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
 }
 
 .pickup .header2 {
@@ -16,4 +16,5 @@
 
 .pickup .header3 {
     font-size: 1rem;
+    white-space: pre-line;
 }
