--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import "./reset.css";
+@import "./fonts.css";
 @import "./variables.css";
 @import "./headers.css";
 @import "./text.css";
@@ -14,13 +15,17 @@
 .pickup {
     width: 100%;
     height: 100vh;
-    background: var(--bg-color);
+    background: linear-gradient(90deg, var(--bg-color--dark) 0%, var(--bg-color--light) 50%, var(--bg-color--main) 100%);
+    background: hsla(0, 0%, 95%, 1);
+    background: radial-gradient(circle, hsla(0, 0%, 95%, 1) 0%, hsla(0, 0%, 91%, 1) 100%);
+    background: -moz-radial-gradient(circle, hsla(0, 0%, 95%, 1) 0%, hsla(0, 0%, 91%, 1) 100%);
+    background: -webkit-radial-gradient(circle, hsla(0, 0%, 95%, 1) 0%, hsla(0, 0%, 91%, 1) 100%);
     color: var(--font-color);
-    font-family: Arial;
-    padding: 3rem;
+    font-family: 'Lato', Helvetica, Arial, sans-serif;
+    padding: 2rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-start;
-    align-content: flex-start;
+    align-items: center;
+    align-content: center;
 }
