--- a/css/form.css
+++ b/css/form.css
@@ -40,6 +40,7 @@
 
 .pickup .button-submit {
     display: none;
+    margin-bottom: 0;
 }
 
 @media screen and (orientation: portrait), screen and (max-width: var(--breakpoint-mobile)) {
